--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Individual Letter Boxes Animation</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="animation-container" id="letter-segment-1">
-    <!-- Individual letter boxes will be generated here -->
-  </div>
-  <div class="animation-container" id="letter-segment-2">
-    <!-- Individual letter boxes will be generated here -->
-  </div>
-  <div class="animation-container" id="letter-segment-3">
-    <!-- Individual letter boxes will be generated here -->
-  </div>
+  <div class="animation-container" id="letter-segment-1"></div>
+  <div class="animation-container" id="letter-segment-2"></div>
+  <div class="animation-container" id="letter-segment-3"></div>
   <script src="script.js"></script>
 </body>
 </html>
+ü
