--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="animation-container" id="letter-segment-1"></div>
-  <div class="animation-container" id="letter-segment-2"></div>
-  <div class="animation-container" id="letter-segment-3"></div>
+  <div class="animation-container header" id="header">
+    <div id="letter-segment-1"></div>
+    <div id="letter-segment-2"></div>
+    <div id="letter-segment-3"></div>
+  </div>
+  <div class="content" id="content">
+    <h1>Individual Letter Boxes Animation</h1>
+    <p>This is a simple animation of individual letter boxes.</p>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
-ü
